# warbler

./: .gitattributes  .gitignore  LICENSE  README.md  local.txt  pyproject.toml  requirements.txt
notebook/: 00 - dereverberation.ipynb  03 - tuning_2d.ipynb  03 - tuning_3d.ipynb
notebook/2D/: 01 - embedding_2d.ipynb  01 - umap_2d.ipynb  02 - hdbscan_2d.ipynb  03 - fuzzy_2d.ipynb  04 - projection_2d.ipynb  05 - individual_2d.ipynb
notebook/3D/: 01 - embedding_3d.ipynb  01 - umap_3d.ipynb  02 - hdbscan_3d.ipynb  03 - fuzzy_3d.ipynb  04 - projection_3d.ipynb  05 - individual_3d.ipynb
notebook/EDA/: 01 - eda.ipynb
notebook/Preprocessing/: audio.ipynb  denoise.ipynb  duration.ipynb  image_segment.ipynb  image_signal.ipynb  individual_segment.ipynb  individual_signal.ipynb  normalize.ipynb  note.ipynb  segment.ipynb  signal.ipynb  test.ipynb
notebook/Spectrogram/: linear.ipynb
notebook/analysis/: 01 - signal.ipynb  02 - segment.ipynb  03 - ignore.ipynb  04 - exclude.ipynb  05 - hdbscan.ipynb  06 - fcm.ipynb  07 - individual.ipynb  07 - presentation.ipynb  08 - presentation.ipynb  09 - presentation.ipynb  10 - presentation.ipynb  11 - presentation.ipynb
notebook/avgn/: 0.0 - convert.ipynb  1.0 - embedding.ipynb  test.ipynb
notebook/cluster/: 1.0-dataframe.ipynb  2.0-umap.ipynb  3.0-clustering.ipynb  4.0-evaluation.ipynb  5.0-preparation.ipynb  6.0-voila.ipynb
notebook/segment/: 0.0-convert.ipynb  1.0-convert.ipynb  1.0-metadata.ipynb  2.0-segment.ipynb  3.0-split.ipynb  4.0-csv.ipynb
notebook/tuning/: 00 - dereverberation.ipynb  01 - umap_2d.ipynb  01 - umap_3d.ipynb  02 - hdbscan_2d.ipynb  02 - hdbscan_3d.ipynb  03 - evaluation_2d.ipynb  03 - evaluation_3d.ipynb  04 - fuzzy_2d.ipynb  04 - fuzzy_3d.ipynb
notebook/validation/: bootstrap.ipynb  elbow.ipynb  search.ipynb  subset.ipynb  test.ipynb  umap_2d.ipynb  voronoi.ipynb
output/pickle/: aggregate.xz  bad.xz  dataframe.xz  error.xz  good.xz  mediocre.xz
warbler/: bootstrap.py  constant.py  logger.py
warbler.py/: bootstrap.py  constant.py  convert.py  logger.py  parameters.py  path.py  plot.py  pyproject.toml  setup.py
warbler.py/analysis/: barcode.py  cluster.py  collection.py  duration.py  filtering.py  global.py  image.py  image_single.py  mel.py  network.py  (+21 more)
(+304 files in other folders)
