[project]
name = "warbler.py"
description = "A pipeline for segmenting, clustering and visualizing Adelaide's warbler songs"
version = "0.0.1"
authors = [
    { name = "Samantha Huang", email = "huang5@uleth.ca" },
    { name = "Brayden Carlson", email = "braycarlson@hotmail.com" }
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["ALL"]

ignore = [
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN204",
    "C901",
    "COM812",
    "BLE001",
    "D202",
    "D205",
    "D212",
    "D213",
    "D400",
    "D406",
    "D407",
    "D415",
    "G004",
    "I001",
    "INP001",
    "PLR0915",
    "Q000",
    "Q000",
    "T201",

    # Unsure
    "PTH123",
    "FBT001",
    "FBT002",
    "UP015",

    # Temporary
    "ANN401",
    "B905",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D401",
    "D417",
    "ERA001",
    "PLR2004",
    "PLW2901",
    "S301",
    "UP035"
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}
